--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <h1> Приветствую! </h1>
-Это главная страница сайта. <br>
-<i> Loading 98%...</i>
+
+    Меня зовут: <i>{{name}}</i><br>
+    Мой email: <i>{{email}}</i><br>
+    Мой телефон: <i>{{phone}}</i><br>
+    <br>
+    Это главная страница сайта. <br>
+    <i> Loading 98%...</i>
 
 </body>
 </html>
