--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
     <br>
     Это главная страница сайта. <br>
     <i> Loading 98%...</i>
+<br>
+<br>
+    <a href="{% url 'items' %}">Список товаров</a>
 
 </body>
 </html>
