--- a/templates/about.html
+++ b/templates/about.html
@@ -6,16 +6,16 @@
     <title>Страница автора</title>
 </head>
 <body>
+        <header>
+        / <a href="/">Home</a> / <a href="/about">about</a> / <a href="/items">items</a></p>
+    </header>
         <h1> Приветствую! </h1>
-
+        
     Меня зовут: <i>{{Имя}}</i><br>
                 <i>{{Отчество}}</i><br>
                 <i>{{Фамилия}}</i><br>
     Мой email: <i>{{email}}</i><br>
     Мой телефон: <i>{{телефон}}</i><br>
     <br>
-
-
-
 </body>
 </html>
