--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     <title>Main Page</title>
 </head>
 <body>
+    <header>
+        / <a href="/">Home</a> / <a href="/about">about</a> / <a href="/items">items</a></p>
+    </header>
     <h1> Приветствую! </h1>
 
     Меня зовут: <i>{{name}}</i><br>
@@ -16,7 +19,6 @@
     <i> Loading 98%...</i>
 <br>
 <br>
-    <a href="{% url 'items' %}">Список товаров</a>
 
 </body>
 </html>
