--- a/templates/item.html
+++ b/templates/item.html
@@ -6,14 +6,14 @@
     <title>Item</title>
 </head>
 <body>
+        <header>
+        / <a href="/">Home</a> / <a href="/about">about</a> / <a href="/items">items</a></p>
+    </header>
     <h1> Информация о товаре </h1>
 
-
-<h1>Имя: {{ item.name }}</h1><br>  
-<p>Количество: {{ item.quantity }}</p><br> 
-
-<p><a href="{% url 'item' id=item.id %}"></p>
-
+        <h1>Имя: {{ item.name }}</h1><br>  
+        <p>Количество: {{ item.quantity }}</p><br>
+        <p><a href="/items/">← Назад к списку товаров</a></p>
 
 </body>
 </html>
